# home-lab-inventory

./: .commitlintrc.json  .cspell.json  .editorconfig  .gitignore  .gitleaks.toml  .gitmessage  .gitmodules  .markdownlint.json  .mise.toml  .pre-commit-config.yaml  .shellcheckrc  .trivyignore  .yamllint.yml  CLAUDE.md  CLAUDE_proposed.md  COMMIT_CONVENTIONS.md  CONTRIBUTING.md  Makefile  README.md  package.json  pyproject.toml  setup-commitlint.sh  setup-pre-commit.sh  validation-issues-summary.md
.claude/agents/: esp32c5-build-flash.md  esp32c5-firmware-dev.md  esp32c5-hil-tester.md  esp32c5-test-orchestrator.md  prd-specialist.md  tactical-planner.md  technical-manager-task-executor.md
.claude/commands/: create-pr.md  resolve-validation.md
.githooks/: README.md  setup.sh
.githooks/config/: allowed-file-types.txt  secret-patterns.txt
.githooks/hooks/: commit-msg  pre-commit  pre-push
.githooks/utils/: conventional-commits.sh  file-checks.sh  secret-detector.sh  yaml-validator.py
.github/: actionlint.yaml  dependabot.yml
.github/workflows/: build-homelab-portal.yml  build-images.yml  build-multi-type-images.yml  deploy.yml  deployment-validation.yml  dockermaster-deployment.yml  emergency-rollback.yml  pr-validation.yml  runner-health-check.yml  runner-strategy.yml  runner-test-simple.yml  runner-verification.yml  security.yml  service-health-monitor.yml  test-self-hosted-runner.yml
.husky/: commit-msg  pre-commit
apps/homelab-portal/: .dockerignore  Dockerfile  README.md  package.json  pnpm-lock.yaml  svelte.config.js  tsconfig.json  vite.config.ts
cloudflare/: README.md  dreamhost.tf  imports.tf  main.tf  outputs.tf  provider.tf  variables.tf
deployment/: README.md
deployment/scripts/: github-sync.sh  install-sync-cron.sh  webhook-receiver.sh
deployment/watchtower/: .env.example  docker-compose.yml
dockermaster/: README.md
dockermaster/configs/: README.md
dockermaster/docker/: config.md
dockermaster/github-runner/: .env.example  README.md  docker-compose.yml  setup-runner.sh
dockermaster/host-network/: README.md
dockermaster/monitoring/: README.md
dockermaster/network/: interfaces.md
dockermaster/scripts/: README.md
dockermaster/services/: systemd.md
dockermaster/storage/: mounts.md
dockermaster/system/: info.md
dockermaster/templates/: README.md  docker-compose.yml  env-template  service-documentation.md
docs/: ci-cd-architecture.md  cicd-pipeline.md  dockermaster-recovery-report.md  dockermaster-split-design.md  dockermaster-sync-report.md  dockermaster-tactical-plan.md  github-runner-setup.md  ha-architecture.md  iac-audit-2026-04-30.md  local-ci-hooks.md  monitoring-coverage-gap-2026-05-07.md  portainer-gitops.md  service-matrix.md  ssh-setup-instructions.md  vault-diagnosis.md  vault-integration-plan.md
docs/architecture/: storage-pattern-audit-2026-05-27.md
docs/network/: esp32-c5-wifi-probe-dashboard.md  esp32-c5-wifi-probe.md  monitoring-plan-2026-05-26.md  pfsense-api.md  pfsense.md  thanos-network-anomalies-2026-05-27.md  wifi-internet-quality-2026-05-25.md
docs/validation/: health-status-matrix-20250829-120445.md
hosts/: README.md  deploy-network-overrides.sh
inventory/: commands-available.md  docker-containers.md  servers.md  virtual-machines.md
mcp/instructions/: generate-tasks.mdc.md  process-task-list.mdc.md
nas/cron/: README.md
output/: automation-test-report.txt
pfsense/: acme-actions.yml  cron-jobs.yml  host-overrides.yml
pfsense/scripts/: dpinger_textfile.sh  dpinger_textfile_30s.sh  sync-certs-to-rproxy.sh
pihole/: README.md  lxc-hardening.md
pihole/dnsmasq.d/: 04-d-lcamaral-com.conf  05-home.conf  06-host-overrides.conf
rundeck/: README.md
rundeck/jobs/: calibre-replication.yaml  calibre-restart.yaml  pihole-auth-check.yaml  ps.yaml  rundeck-token-check.yaml  sync-ssl-certificates.yaml  ubuntu-auto-update.yaml  vms-backup.yaml
scripts/: check-image-pins.sh  extract-compose.sh  find-deps.sh  parse-env.sh  portainer-redeploy.py  setup-dev-environment.sh  ssh-dockermaster.sh  sync-host-network.py  sync-host-overrides.py  sync-pfsense-acme-actions.py  sync-pfsense-cron-jobs.py  sync-pfsense-scripts.py  test-automation.sh
scripts/cicd/: README.md  deploy-service.sh  health-check.sh  vault-integration.sh
scripts/grafana/: build_internet_network_overview.py  (+2 more)
terraform/: README.md
(+330 files in other folders)
